<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".OCRActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#49475B"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="3dp"
                android:elevation="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:text="@string/result"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="#fff"
                        android:textSize="30sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/resultEt"
                        android:background="@null"
                        android:autoLink="all"
                        android:padding="5dp"
                        android:textColor="#ffff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/todo2"
                        />
                    <!--android:autoLink="all"
                    android:editable="false"-->
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#49475B"
                app:cardUseCompatPadding="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="3dp"
                android:elevation="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#49475B"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/image_preview"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageIv"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"

                        android:maxHeight="200dp"
                        android:contentDescription="@string/todo1" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="381dp"
        android:layout_height="245dp"
        android:layout_below="@+id/ViewData"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/ViewData"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/view_all_medicines" />

</RelativeLayout>